// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ScriptEngine golden (BTC, 4200 candles) > alma 1`] = `
{
  "hash": "732544560845627927",
  "head": [
    [
      1540915200000,
      NaN,
    ],
    [
      1540918800000,
      NaN,
    ],
    [
      1540922400000,
      NaN,
    ],
  ],
  "length": 4200,
  "tail": [
    [
      1556024400000,
      5587.46820391,
    ],
    [
      1556028000000,
      5595.15234832,
    ],
    [
      1556031600000,
      5599.33079137,
    ],
  ],
  "valueCount": 8381,
}
`;

exports[`ScriptEngine golden (BTC, 4200 candles) > atr 1`] = `
{
  "hash": "466300260353281447",
  "head": [
    [
      1540915200000,
      NaN,
    ],
    [
      1540918800000,
      NaN,
    ],
    [
      1540922400000,
      NaN,
    ],
  ],
  "length": 4200,
  "tail": [
    [
      1556024400000,
      39.87235442,
    ],
    [
      1556028000000,
      39.58861482,
    ],
    [
      1556031600000,
      40.00371376,
    ],
  ],
  "valueCount": 8387,
}
`;

exports[`ScriptEngine golden (BTC, 4200 candles) > bb_basis 1`] = `
{
  "hash": "1984627569789357903",
  "head": [
    [
      1540915200000,
      NaN,
    ],
    [
      1540918800000,
      NaN,
    ],
    [
      1540922400000,
      NaN,
    ],
  ],
  "length": 4200,
  "tail": [
    [
      1556024400000,
      5504.76,
    ],
    [
      1556028000000,
      5513.915,
    ],
    [
      1556031600000,
      5522.89,
    ],
  ],
  "valueCount": 8381,
}
`;

exports[`ScriptEngine golden (BTC, 4200 candles) > cci 1`] = `
{
  "hash": "2058506054031452178",
  "head": [
    [
      1540915200000,
      NaN,
    ],
    [
      1540918800000,
      NaN,
    ],
    [
      1540922400000,
      NaN,
    ],
  ],
  "length": 4200,
  "tail": [
    [
      1556024400000,
      87.35129886,
    ],
    [
      1556028000000,
      85.74754909,
    ],
    [
      1556031600000,
      61.31028178,
    ],
  ],
  "valueCount": 8381,
}
`;

exports[`ScriptEngine golden (BTC, 4200 candles) > change 1`] = `
{
  "hash": "2141127486761388887",
  "head": [
    [
      1540915200000,
      NaN,
    ],
    [
      1540918800000,
      4.9,
    ],
    [
      1540922400000,
      -1.35060019,
    ],
  ],
  "length": 4200,
  "tail": [
    [
      1556024400000,
      -0.5,
    ],
    [
      1556028000000,
      9.3,
    ],
    [
      1556031600000,
      -24,
    ],
  ],
  "valueCount": 8399,
}
`;

exports[`ScriptEngine golden (BTC, 4200 candles) > cmo 1`] = `
{
  "hash": "1491651603208134167",
  "head": [
    [
      1540915200000,
      NaN,
    ],
    [
      1540918800000,
      NaN,
    ],
    [
      1540922400000,
      NaN,
    ],
  ],
  "length": 4200,
  "tail": [
    [
      1556024400000,
      81.37787056,
    ],
    [
      1556028000000,
      97.12793734,
    ],
    [
      1556031600000,
      77.41935484,
    ],
  ],
  "valueCount": 8386,
}
`;

exports[`ScriptEngine golden (BTC, 4200 candles) > cog 1`] = `
{
  "hash": "2067343397359231566",
  "head": [
    [
      1540915200000,
      NaN,
    ],
    [
      1540918800000,
      NaN,
    ],
    [
      1540922400000,
      NaN,
    ],
  ],
  "length": 4200,
  "tail": [
    [
      1556024400000,
      -5.49121196,
    ],
    [
      1556028000000,
      -5.49217886,
    ],
    [
      1556031600000,
      -5.49426053,
    ],
  ],
  "valueCount": 8391,
}
`;

exports[`ScriptEngine golden (BTC, 4200 candles) > dev 1`] = `
{
  "hash": "31816404401597018",
  "head": [
    [
      1540915200000,
      NaN,
    ],
    [
      1540918800000,
      NaN,
    ],
    [
      1540922400000,
      NaN,
    ],
  ],
  "length": 4200,
  "tail": [
    [
      1556024400000,
      82.38,
    ],
    [
      1556028000000,
      84.0335,
    ],
    [
      1556031600000,
      81.672,
    ],
  ],
  "valueCount": 8381,
}
`;

exports[`ScriptEngine golden (BTC, 4200 candles) > ema 1`] = `
{
  "hash": "1358235384681583655",
  "head": [
    [
      1540915200000,
      NaN,
    ],
    [
      1540918800000,
      NaN,
    ],
    [
      1540922400000,
      NaN,
    ],
  ],
  "length": 4200,
  "tail": [
    [
      1556024400000,
      5517.35689328,
    ],
    [
      1556028000000,
      5527.32290344,
    ],
    [
      1556031600000,
      5534.0540555,
    ],
  ],
  "valueCount": 8381,
}
`;

exports[`ScriptEngine golden (BTC, 4200 candles) > highest 1`] = `
{
  "hash": "1495385351523532448",
  "head": [
    [
      1540915200000,
      6333,
    ],
    [
      1540918800000,
      6337.9,
    ],
    [
      1540922400000,
      6337.9,
    ],
  ],
  "length": 4200,
  "tail": [
    [
      1556024400000,
      5613.2,
    ],
    [
      1556028000000,
      5622,
    ],
    [
      1556031600000,
      5622,
    ],
  ],
  "valueCount": 8400,
}
`;

exports[`ScriptEngine golden (BTC, 4200 candles) > hma 1`] = `
{
  "hash": "1374197256380656180",
  "head": [
    [
      1540915200000,
      NaN,
    ],
    [
      1540918800000,
      NaN,
    ],
    [
      1540922400000,
      NaN,
    ],
  ],
  "length": 4200,
  "tail": [
    [
      1556024400000,
      5633.36230392,
    ],
    [
      1556028000000,
      5633.94744281,
    ],
    [
      1556031600000,
      5631.1660866,
    ],
  ],
  "valueCount": 8382,
}
`;

exports[`ScriptEngine golden (BTC, 4200 candles) > linreg 1`] = `
{
  "hash": "1670573537872073316",
  "head": [
    [
      1540915200000,
      NaN,
    ],
    [
      1540918800000,
      NaN,
    ],
    [
      1540922400000,
      NaN,
    ],
  ],
  "length": 4200,
  "tail": [
    [
      1556024400000,
      5630.65142857,
    ],
    [
      1556028000000,
      5645.83857143,
    ],
    [
      1556031600000,
      5651.91285714,
    ],
  ],
  "valueCount": 8381,
}
`;

exports[`ScriptEngine golden (BTC, 4200 candles) > lowest 1`] = `
{
  "hash": "974153862120933247",
  "head": [
    [
      1540915200000,
      6333,
    ],
    [
      1540918800000,
      6333,
    ],
    [
      1540922400000,
      6333,
    ],
  ],
  "length": 4200,
  "tail": [
    [
      1556024400000,
      5398.8,
    ],
    [
      1556028000000,
      5398.8,
    ],
    [
      1556031600000,
      5398.8,
    ],
  ],
  "valueCount": 8400,
}
`;

exports[`ScriptEngine golden (BTC, 4200 candles) > macd 1`] = `
{
  "hash": "1952785018550915152",
  "head": [
    [
      1540915200000,
      NaN,
    ],
    [
      1540918800000,
      NaN,
    ],
    [
      1540922400000,
      NaN,
    ],
  ],
  "length": 4200,
  "tail": [
    [
      1556024400000,
      67.4914388,
    ],
    [
      1556028000000,
      67.44930559,
    ],
    [
      1556031600000,
      64.73311228,
    ],
  ],
  "valueCount": 8375,
}
`;

exports[`ScriptEngine golden (BTC, 4200 candles) > mfi 1`] = `
{
  "hash": "1734285963017223607",
  "head": [
    [
      1540915200000,
      NaN,
    ],
    [
      1540918800000,
      NaN,
    ],
    [
      1540922400000,
      NaN,
    ],
  ],
  "length": 4200,
  "tail": [
    [
      1556024400000,
      83.14445145,
    ],
    [
      1556028000000,
      87.83855813,
    ],
    [
      1556031600000,
      85.60510784,
    ],
  ],
  "valueCount": 8387,
}
`;

exports[`ScriptEngine golden (BTC, 4200 candles) > mom 1`] = `
{
  "hash": "2026119087895077735",
  "head": [
    [
      1540915200000,
      NaN,
    ],
    [
      1540918800000,
      NaN,
    ],
    [
      1540922400000,
      NaN,
    ],
  ],
  "length": 4200,
  "tail": [
    [
      1556024400000,
      151.9,
    ],
    [
      1556028000000,
      73.1,
    ],
    [
      1556031600000,
      27.6,
    ],
  ],
  "valueCount": 8390,
}
`;

exports[`ScriptEngine golden (BTC, 4200 candles) > rma 1`] = `
{
  "hash": "1235308745665885045",
  "head": [
    [
      1540915200000,
      NaN,
    ],
    [
      1540918800000,
      NaN,
    ],
    [
      1540922400000,
      NaN,
    ],
  ],
  "length": 4200,
  "tail": [
    [
      1556024400000,
      5488.71818665,
    ],
    [
      1556028000000,
      5498.23831618,
    ],
    [
      1556031600000,
      5505.36415073,
    ],
  ],
  "valueCount": 8387,
}
`;

exports[`ScriptEngine golden (BTC, 4200 candles) > roc 1`] = `
{
  "hash": "497187035005643953",
  "head": [
    [
      1540915200000,
      NaN,
    ],
    [
      1540918800000,
      NaN,
    ],
    [
      1540922400000,
      NaN,
    ],
  ],
  "length": 4200,
  "tail": [
    [
      1556024400000,
      2.78164372,
    ],
    [
      1556028000000,
      1.31737822,
    ],
    [
      1556031600000,
      0.49547609,
    ],
  ],
  "valueCount": 8390,
}
`;

exports[`ScriptEngine golden (BTC, 4200 candles) > rsi 1`] = `
{
  "hash": "1859460609259362902",
  "head": [
    [
      1540915200000,
      NaN,
    ],
    [
      1540918800000,
      NaN,
    ],
    [
      1540922400000,
      NaN,
    ],
  ],
  "length": 4200,
  "tail": [
    [
      1556024400000,
      81.29152203,
    ],
    [
      1556028000000,
      82.13039574,
    ],
    [
      1556031600000,
      73.02977408,
    ],
  ],
  "valueCount": 8386,
}
`;

exports[`ScriptEngine golden (BTC, 4200 candles) > sma 1`] = `
{
  "hash": "1984627569789357903",
  "head": [
    [
      1540915200000,
      NaN,
    ],
    [
      1540918800000,
      NaN,
    ],
    [
      1540922400000,
      NaN,
    ],
  ],
  "length": 4200,
  "tail": [
    [
      1556024400000,
      5504.76,
    ],
    [
      1556028000000,
      5513.915,
    ],
    [
      1556031600000,
      5522.89,
    ],
  ],
  "valueCount": 8381,
}
`;

exports[`ScriptEngine golden (BTC, 4200 candles) > stdev 1`] = `
{
  "hash": "2263086097532230511",
  "head": [
    [
      1540915200000,
      NaN,
    ],
    [
      1540918800000,
      NaN,
    ],
    [
      1540922400000,
      NaN,
    ],
  ],
  "length": 4200,
  "tail": [
    [
      1556024400000,
      84.21642001,
    ],
    [
      1556028000000,
      86.48106888,
    ],
    [
      1556031600000,
      85.42094532,
    ],
  ],
  "valueCount": 8381,
}
`;

exports[`ScriptEngine golden (BTC, 4200 candles) > stoch 1`] = `
{
  "hash": "1682996326456080658",
  "head": [
    [
      1540915200000,
      0.46511628,
    ],
    [
      1540918800000,
      23.25581395,
    ],
    [
      1540922400000,
      39.28367282,
    ],
  ],
  "length": 4200,
  "tail": [
    [
      1556024400000,
      86.64871104,
    ],
    [
      1556028000000,
      89.78579223,
    ],
    [
      1556031600000,
      79.19123842,
    ],
  ],
  "valueCount": 8400,
}
`;

exports[`ScriptEngine golden (BTC, 4200 candles) > swma 1`] = `
{
  "hash": "2027696108956444299",
  "head": [
    [
      1540915200000,
      NaN,
    ],
    [
      1540918800000,
      NaN,
    ],
    [
      1540922400000,
      NaN,
    ],
  ],
  "length": 4200,
  "tail": [
    [
      1556024400000,
      5604.46666667,
    ],
    [
      1556028000000,
      5611.68333333,
    ],
    [
      1556031600000,
      5613.43333333,
    ],
  ],
  "valueCount": 8397,
}
`;

exports[`ScriptEngine golden (BTC, 4200 candles) > tr 1`] = `
{
  "hash": "309892051993124463",
  "head": [
    [
      1540915200000,
      NaN,
    ],
    [
      1540918800000,
      9.15581608,
    ],
    [
      1540922400000,
      19.2,
    ],
  ],
  "length": 4200,
  "tail": [
    [
      1556024400000,
      39.8,
    ],
    [
      1556028000000,
      35.9,
    ],
    [
      1556031600000,
      45.4,
    ],
  ],
  "valueCount": 8399,
}
`;

exports[`ScriptEngine golden (BTC, 4200 candles) > tsi 1`] = `
{
  "hash": "1448676823249508077",
  "head": [
    [
      1540915200000,
      NaN,
    ],
    [
      1540918800000,
      NaN,
    ],
    [
      1540922400000,
      NaN,
    ],
  ],
  "length": 4200,
  "tail": [
    [
      1556024400000,
      0.54719308,
    ],
    [
      1556028000000,
      0.56102159,
    ],
    [
      1556031600000,
      0.54809706,
    ],
  ],
  "valueCount": 8363,
}
`;

exports[`ScriptEngine golden (BTC, 4200 candles) > vwma 1`] = `
{
  "hash": "1133410331611903012",
  "head": [
    [
      1540915200000,
      NaN,
    ],
    [
      1540918800000,
      NaN,
    ],
    [
      1540922400000,
      NaN,
    ],
  ],
  "length": 4200,
  "tail": [
    [
      1556024400000,
      5520.90312376,
    ],
    [
      1556028000000,
      5531.59104231,
    ],
    [
      1556031600000,
      5540.52999739,
    ],
  ],
  "valueCount": 8381,
}
`;

exports[`ScriptEngine golden (BTC, 4200 candles) > wma 1`] = `
{
  "hash": "213807990171404204",
  "head": [
    [
      1540915200000,
      NaN,
    ],
    [
      1540918800000,
      NaN,
    ],
    [
      1540922400000,
      NaN,
    ],
  ],
  "length": 4200,
  "tail": [
    [
      1556024400000,
      5546.72380952,
    ],
    [
      1556028000000,
      5557.88952381,
    ],
    [
      1556031600000,
      5565.89761905,
    ],
  ],
  "valueCount": 8381,
}
`;

exports[`ScriptEngine golden (BTC, 4200 candles) > wpr 1`] = `
{
  "hash": "636852457757456689",
  "head": [
    [
      1540915200000,
      -99.53488372,
    ],
    [
      1540918800000,
      -76.74418605,
    ],
    [
      1540922400000,
      -60.71632718,
    ],
  ],
  "length": 4200,
  "tail": [
    [
      1556024400000,
      -13.35128896,
    ],
    [
      1556028000000,
      -10.21420777,
    ],
    [
      1556031600000,
      -20.80876158,
    ],
  ],
  "valueCount": 8400,
}
`;

exports[`ScriptEngine nested lineage > alma-of-sma 1`] = `
{
  "hash": "1905593252768929852",
  "head": [
    [
      1540915200000,
      NaN,
    ],
    [
      1540918800000,
      NaN,
    ],
    [
      1540922400000,
      NaN,
    ],
  ],
  "length": 4200,
  "tail": [
    [
      1556024400000,
      5366.03285571,
    ],
    [
      1556028000000,
      5371.62236892,
    ],
    [
      1556031600000,
      5377.4458466,
    ],
  ],
  "valueCount": 8332,
}
`;
